--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,40 +8,61 @@
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-    <div ng-controller="StudentController" >
-        <form data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal">
-            <div class="form-group">
-                <label class="col-xs-3 control-label">First Name:</label>
-                <div class="col-xs-6">
-                    <input  class="form-control"  type="text" ng-model="student.firstName" /><br/>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-xs-3 control-label">Last Name:</label>
-                <div class="col-xs-6">
-                    <input  class="form-control" type="text" ng-model="student.lastName" /><br/>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-xs-3 control-label">Year of study</label>
-                <div class="col-xs-6">
-                    <input  class="form-control" type="text" ng-model="student.yearOfStudy" /><br/>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-9 col-xs-offset-3" >
-                    <input type="button" class="btn btn-default" type="submit" value="Submit" ng-click="saveStudent()" />
-                </div>
-            </div>
-        </form>
-        <!--<pre>firstName = {{student.firstName}}</pre>-->
-        <!--{{students}}-->
+<div ng-controller="StudentController">
+    <div class="page-header">
+        <h2 align="center">My first application</h2>
     </div>
+    <form data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal">
+        <div class="form-group">
+            <label class="col-xs-3 control-label">First Name:</label>
 
-    <script src="bower_components/angular/angular.min.js" ></script>
-    <script src="js/factory.js"></script>
-    <script src="js/controller.js"></script>
+            <div class="col-xs-6">
+                <input class="form-control" type="text" ng-model="student.firstName"/><br/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">Last Name:</label>
+
+            <div class="col-xs-6">
+                <input class="form-control" type="text" ng-model="student.lastName"/><br/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">Year of study</label>
+
+            <div class="col-xs-6">
+                <input class="form-control" type="text" ng-model="student.yearOfStudy"/><br/>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-9 col-xs-offset-3">
+                <input type="button" class="btn btn-default" type="submit" value="Submit" ng-click="saveStudent()"/>
+            </div>
+        </div>
+    </form>
+    <!--<pre>firstName = {{student.firstName}}</pre>-->
+    <!--{{students}}-->
+    <table ng-table="studentTable" class="table">
+        <tbody>
+        <tr ng-repeat="student in $data">
+            <td data-title="'First Name'">{{student.firstName}}</td>
+            <td data-title="'Last name'">{{student.lastName}}</td>
+            <td data-title="'Birthday'">{{student.birthday}}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/ng-table/dist/ng-table.js"></script>
+<script src="js/app.js"></script>
+<script src="js/factory.js"></script>
+<script src="js/controller.js"></script>
+
 </body>
 </html>
