--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,68 +1,55 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
-<html ng-app="example">
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>My project</title>
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+<html>
+<head>
+
+    <!-- CSS (load bootstrap) -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
-<body>
-<div ng-controller="StudentController">
-    <div class="page-header">
-        <h2 align="center">My first application</h2>
+
+<!-- apply our angular app to our site -->
+<body ng-app="example">
+
+<!-- NAVIGATION -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" ui-sref="#"><img alt="My Brand" src="img/logo.png"></a>
     </div>
-    <form data-toggle="validator" id="sendMessageForm" method="post" class="form-horizontal">
-        <div class="form-group">
-            <label class="col-xs-3 control-label">First Name:</label>
+    <ul class="nav navbar-nav">
+        <li><a ui-sref="index"><i class="fa fa-home"></i> Dashboard</a></li>
+        <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
+        <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
+    </ul>
+</nav>
 
-            <div class="col-xs-6">
-                <input class="form-control" type="text" ng-model="student.firstName"/><br/>
-            </div>
-        </div>
+<!-- MAIN CONTENT -->
+<div class="container">
 
-        <div class="form-group">
-            <label class="col-xs-3 control-label">Last Name:</label>
+    <!-- THIS IS WHERE WE WILL INJECT OUR CONTENT ============================== -->
+    <div ui-view></div>
 
-            <div class="col-xs-6">
-                <input class="form-control" type="text" ng-model="student.lastName"/><br/>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-xs-3 control-label">Year of study</label>
-
-            <div class="col-xs-6">
-                <input class="form-control" type="text" ng-model="student.yearOfStudy"/><br/>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-xs-9 col-xs-offset-3">
-                <input type="button" class="btn btn-default" type="submit" value="Submit" ng-click="saveStudent()"/>
-            </div>
-        </div>
-    </form>
-    <!--<pre>firstName = {{student.firstName}}</pre>-->
-    <!--{{students}}-->
-    <table ng-table="studentTable" class="table">
-        <tbody>
-        <tr ng-repeat="student in $data">
-            <td data-title="'First Name'">{{student.firstName}}</td>
-            <td data-title="'Last name'">{{student.lastName}}</td>
-            <td data-title="'Birthday'">{{student.birthday}}</td>
-        </tr>
-        </tbody>
-    </table>
 </div>
 
+<div class="text-center">
+    <p>An angularjs tutorial by <a href="" target="_blank">company</a></p>
+    <p>View the tutorial: <a href="" target="_blank">AngularJS Routing using UI-Router</a></p>
+</div>
 
+<!-- JS (load angular, ui-router, and our custom js file) -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
-<script src="js/controller.js"></script>
-
+<script src="js/controllers/controllers.js"></script>
+<script src="js/controllers/homeListCtrl.js"></script>
+<script src="js/aboutCtrl.js    "></script>
+<script src="js/routes.js"></script>
 </body>
 </html>
