--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <!--<base href="/">-->
     <!-- CSS (load bootstrap) -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
@@ -15,17 +15,30 @@
 <body ng-app="example">
 
 <!-- NAVIGATION -->
+<!-- Collect the nav links, forms, and other content for toggling -->
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="navbar-header">
         <a class="navbar-brand" ui-sref="#"><img alt="My Brand" src="img/logo.png"></a>
     </div>
     <ul class="nav navbar-nav">
-        <li><a ui-sref="index"><i class="fa fa-home"></i> Dashboard</a></li>
+        <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+        <li><a ui-sref="students"><i class="fa fa-users"></i> Students</a></li>
         <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
         <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
     </ul>
+    <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
 </nav>
-
+</div>
 <!-- MAIN CONTENT -->
 <div class="container">
 
@@ -43,13 +56,19 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
+<!--<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
+<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
-<script src="js/controllers/controllers.js"></script>
-<script src="js/controllers/homeListCtrl.js"></script>
-<script src="js/aboutCtrl.js    "></script>
 <script src="js/routes.js"></script>
+
+<script src="js/controllers/studentsCtrl.js"></script>
+<script src="js/controllers/homeListCtrl.js"></script>
+<script src="js/controllers/aboutCtrl.js"></script>
+
+
 </body>
 </html>
