--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,10 +24,11 @@
     <ul class="nav navbar-nav">
         <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
         <li><a ui-sref="students"><i class="fa fa-users"></i> Students</a></li>
+        <li><a ui-sref="institutions"><i class="fa fa-building-o"></i> Institutions</a></li>
         <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
         <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
     </ul>
-    <form class="navbar-form navbar-left" role="search">
+    <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
         </div>
@@ -68,6 +69,7 @@
 <script src="js/controllers/studentsCtrl.js"></script>
 <script src="js/controllers/homeListCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
+<script src="js/controllers/institutionsCtrl.js"></script>
 
 
 </body>
