--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,7 +57,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
-<!--<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>-->
+<!--<script src="bower_components/ng-dropdown/dist/js/ng-dropdown.min.js></script>-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
