--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,4 @@
 <!-- index.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,51 +7,46 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-xeditable/dist/css/xeditable.css">
 </head>
-
 <!-- apply our angular app to our site -->
 <body ng-app="example">
-
 <!-- NAVIGATION -->
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="#"><img alt="My Brand" src="img/logo.png"></a>
-    </div>
-    <ul class="nav navbar-nav">
-        <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-        <li><a ui-sref="students"><i class="fa fa-users"></i> Students</a></li>
-        <li><a ui-sref="institutions"><i class="fa fa-building-o"></i> Institutions</a></li>
-        <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
-        <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
-    </ul>
-    <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" ui-sref="#"><img alt="My Brand" src="img/logo.png"></a>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
-</nav>
+        <ul class="nav navbar-nav">
+            <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+            <li><a ui-sref="students"><i class="fa fa-users"></i> Students</a></li>
+            <li><a ui-sref="institutions"><i class="fa fa-building-o"></i> Institutions</a></li>
+            <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
+            <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
+            <li><a ui-sref="editable-row"><i class="fa fa-table"></i> Editable Row</a></li>
+        </ul>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </nav>
 </div>
 <!-- MAIN CONTENT -->
 <div class="container">
-
     <!-- THIS IS WHERE WE WILL INJECT OUR CONTENT ============================== -->
     <div ui-view></div>
-
 </div>
-
 <div class="text-center">
     <p>An angularjs tutorial by <a href="" target="_blank">company</a></p>
     <p>View the tutorial: <a href="" target="_blank">AngularJS Routing using UI-Router</a></p>
 </div>
-
 <!-- JS (load angular, ui-router, and our custom js file) -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
@@ -61,6 +55,7 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
 <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+<script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
@@ -70,7 +65,7 @@
 <script src="js/controllers/homeListCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
 <script src="js/controllers/institutionsCtrl.js"></script>
-
+<script src="js/controllers/EditableRowCtrl.js"></script>
 
 </body>
 </html>
