--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,8 +54,10 @@
 <!--<script src="bower_components/ng-dropdown/dist/js/ng-dropdown.min.js></script>-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
-<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+<!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>-->
 <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="bower_components/angularjs-toaster/toaster.min.css"></script>
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
