--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-xeditable/dist/css/xeditable.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">
 </head>
 <!-- apply our angular app to our site -->
 <body ng-app="example">
@@ -51,13 +51,11 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular/angular.min.js"></script>
 <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
-<!--<script src="bower_components/ng-dropdown/dist/js/ng-dropdown.min.js></script>-->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
-<!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>-->
-<script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="bower_components/angularjs-toaster/toaster.min.css"></script>
+<script src="bower_components/angularjs-toaster/toaster.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
@@ -67,7 +65,6 @@
 <script src="js/controllers/homeListCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
 <script src="js/controllers/institutionsCtrl.js"></script>
-<script src="js/controllers/EditableRowCtrl.js"></script>
 
 </body>
 </html>
