--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-xeditable/dist/css/xeditable.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="bower_components/angular-xeditable/dist/css/xeditable.css">-->
+    <!--<link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">-->
 </head>
 <!-- apply our angular app to our site -->
 <body ng-app="example">
@@ -25,7 +25,7 @@
             <li><a ui-sref="institutions"><i class="fa fa-building-o"></i> Institutions</a></li>
             <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
             <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
-            <li><a ui-sref="editable-row"><i class="fa fa-table"></i> Editable Row</a></li>
+            <!--<li><a ui-sref="editable-row"><i class="fa fa-table"></i> Editable Row</a></li>-->
         </ul>
         <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
@@ -56,9 +56,9 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
 <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>-->
-<script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
+<!--<script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>-->
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="bower_components/angularjs-toaster/toaster.min.css"></script>
+<!--<script src="bower_components/angularjs-toaster/toaster.min.js"></script>-->
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
@@ -68,7 +68,7 @@
 <script src="js/controllers/homeListCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
 <script src="js/controllers/institutionsCtrl.js"></script>
-<script src="js/controllers/EditableRowCtrl.js"></script>
+<!--<script src="js/controllers/EditableRowCtrl.js"></script>-->
 
 </body>
 </html>
