--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--<link rel="stylesheet" type="text/css" href="bower_components/angular-xeditable/dist/css/xeditable.css">-->
-    <!--<link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">-->
+    <link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">
 </head>
 <!-- apply our angular app to our site -->
 <body ng-app="example">
@@ -58,7 +58,8 @@
 <!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>-->
 <!--<script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>-->
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<!--<script src="bower_components/angularjs-toaster/toaster.min.js"></script>-->
+<script src="bower_components/angularjs-toaster/toaster.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
