finishing functionality of removing institutions implementing ng-modal

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-toaster/toaster.min.css">
     <link rel="stylesheet" type="text/css" href="bower_components/angularjs-datepicker/src/css/angular-datepicker.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
 </head>
 <!-- apply our angular app to our site -->
 <body ng-app="example">
@@ -55,10 +56,11 @@
 <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
-<!--<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>-->
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="bower_components/angularjs-toaster/toaster.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
+<!--<script src="bower_components/angular-confirm.js"></script>-->
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
