--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,22 +21,22 @@
             <a class="navbar-brand" ui-sref="#"><img alt="My Brand" src="img/logo.png"></a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-            <li><a ui-sref="students"><i class="fa fa-users"></i> Students</a></li>
-            <li><a ui-sref="institutions"><i class="fa fa-building-o"></i> Institutions</a></li>
-            <li><a ui-sref="home"><i class="fa fa-shield"></i> Page example</a></li>
-            <li><a ui-sref="about"><i class="fa fa-briefcase"></i> About</a></li>
-            <!--<li><a ui-sref="editable-row"><i class="fa fa-table"></i> Editable Row</a></li>-->
+            <li><a ui-sref="home"><i class="fa fa-shield"></i> Acasa</a></li>
+            <li><a ui-sref="index"><i class="fa fa-dashboard"></i> Panou de control</a></li>
+            <li><a ui-sref="students"><i class="fa fa-users"></i> Studenti</a></li>
+            <li><a ui-sref="institutions"><i class="fa fa-university"></i> Institutii</a></li>
+            <li><a ui-sref="facultati"><i class="fa fa-tasks"></i> Facultati</a></li>
+            <li><a ui-sref="about"><i class="fa fa-briefcase"></i> Despre</a></li>
         </ul>
         <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" placeholder="Cauta">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Trimite</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Inregistrare</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Autentificare</a></li>
         </ul>
     </nav>
 </div>
@@ -57,11 +57,9 @@
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/ng-table/dist/ng-table.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.1/ui-bootstrap-tpls.min.js"></script>-->
 <script src="bower_components/angularjs-toaster/toaster.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angularjs-datepicker/src/js/angular-datepicker.js"></script>
-<!--<script src="bower_components/angular-confirm.js"></script>-->
 
 <script src="js/app.js"></script>
 <script src="js/factory.js"></script>
@@ -71,7 +69,7 @@
 <script src="js/controllers/homeListCtrl.js"></script>
 <script src="js/controllers/aboutCtrl.js"></script>
 <script src="js/controllers/institutionsCtrl.js"></script>
-<!--<script src="js/controllers/EditableRowCtrl.js"></script>-->
+<script src="js/controllers/facultateCtrl.js"></script>
 
 </body>
 </html>
